Add collection constraint tests.